添加Scheduling Tasks Demo

--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
 	<modules>
 		<module>gs-rest-service</module>
 		<module>gs-device-detection</module>
+		<module>gs-scheduling-tasks</module>
 	</modules>
 
 	<properties>
