添加Consuming a RESTful Web Service Demo

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
 		<module>gs-rest-service</module>
 		<module>gs-device-detection</module>
 		<module>gs-scheduling-tasks</module>
+		<module>gs-consuming-rest</module>
 	</modules>
 
 	<properties>
