--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<module>gs-device-detection</module>
 		<module>gs-scheduling-tasks</module>
 		<module>gs-consuming-rest</module>
+		<module>gs-relational-data-access</module>
 	</modules>
 
 	<properties>
