添加Messaging with Redis Demo

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
 		<module>gs-uploading-files</module>
 		<module>gs-authenticating-ldap</module>
 		<module>gs-register-facebook-app</module>
+		<module>gs-messaging-redis</module>
 	</modules>
 
 	<properties>
