--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,7 @@
 		<module>gs-messaging-redis</module>
 		<module>gs-messaging-rabbitmq</module>
 		<module>gs-accessing-data-neo4j</module>
+		<module>gs-validating-form-input</module>
 	</modules>
 
 	<properties>
