添加Building a RESTful Web Service with Spring Boot Actuator Demo

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
 		<module>gs-messaging-rabbitmq</module>
 		<module>gs-accessing-data-neo4j</module>
 		<module>gs-validating-form-input</module>
+		<module>gs-actuator-service</module>
 	</modules>
 
 	<properties>
