添加Creating a Batch Service Demo

--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
 		<module>gs-validating-form-input</module>
 		<module>gs-actuator-service</module>
 		<module>gs-messaging-jms</module>
+		<module>gs-batch-processing</module>
 	</modules>
 
 	<properties>
