--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
 		<module>gs-messaging-jms</module>
 		<module>gs-batch-processing</module>
 		<module>gs-securing-web</module>
+		<module>gs-rest-hateoas</module>
 	</modules>
 
 	<properties>
