添加Integrating Data Demo

--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
 		<module>gs-securing-web</module>
 		<module>gs-rest-hateoas</module>
 		<module>gs-accessing-data-gemfire</module>
+		<module>gs-integration</module>
 	</modules>
 
 	<properties>
