添加Caching Data with GemFire Demo

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
 		<module>gs-rest-hateoas</module>
 		<module>gs-accessing-data-gemfire</module>
 		<module>gs-integration</module>
+		<module>gs-caching-gemfire</module>
 	</modules>
 
 	<properties>
