添加Managing Transactions Demo

--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,7 @@
 		<module>gs-accessing-data-gemfire</module>
 		<module>gs-integration</module>
 		<module>gs-caching-gemfire</module>
+		<module>gs-managing-transactions</module>
 	</modules>
 
 	<properties>
