添加Accessing Data with JPA Demo

--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,7 @@
 		<module>gs-integration</module>
 		<module>gs-caching-gemfire</module>
 		<module>gs-managing-transactions</module>
+		<module>gs-accessing-data-jpa</module>
 	</modules>
 
 	<properties>
