添加Converting a Spring Boot JAR Application to a WAR Demo

--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,7 @@
 		<module>gs-accessing-data-jpa</module>
 		<module>gs-accessing-data-mongodb</module>
 		<module>gs-serving-web-content</module>
+		<module>gs-convert-jar-to-war</module>
 	</modules>
 
 	<properties>
