添加Creating Asynchronous Methods Demo

--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,7 @@
 		<module>gs-accessing-data-mongodb</module>
 		<module>gs-serving-web-content</module>
 		<module>gs-convert-jar-to-war</module>
+		<module>gs-async-method</module>
 	</modules>
 
 	<properties>
