添加Using WebSocket to build an interactive web application Demo

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,7 @@
 		<module>gs-async-method</module>
 		<module>gs-handling-form-submission</module>
 		<module>gs-spring-boot</module>
+		<module>gs-messaging-stomp-websocket</module>
 	</modules>
 
 	<properties>
