添加Consuming a RESTful Web Service with jQuery Demo

--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,7 @@
 		<module>gs-consuming-rest-angularjs</module>
 		<module>gs-consuming-rest-restjs</module>
 		<module>gs-consuming-rest-backbone</module>
+		<module>gs-consuming-rest-jquery</module>
 	</modules>
 
 	<properties>
