添加Consuming a RESTful Web Service from iOS Demo

--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,7 @@
 		<module>gs-consuming-rest-backbone</module>
 		<module>gs-consuming-rest-jquery</module>
 		<module>gs-consuming-rest-sencha</module>
+		<module>gs-consuming-rest-ios</module>
 	</modules>
 
 	<properties>
