添加Enabling Cross Origin Requests for a RESTful Web Service Demo

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<module>gs-consuming-rest-jquery</module>
 		<module>gs-consuming-rest-sencha</module>
 		<module>gs-consuming-rest-ios</module>
+		<module>gs-rest-service-cors</module>
 	</modules>
 
 	<properties>
