添加Accessing JPA Data with REST Demo

--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
 		<module>gs-messaging-stomp-msgsjs</module>
 		<module>gs-spring-boot-cli-and-js</module>
 		<module>gs-consuming-web-service</module>
+		<module>gs-accessing-data-rest</module>
 	</modules>
 
 	<properties>
