添加Accessing Neo4j Data with REST Demo

--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,7 @@
 		<module>gs-spring-boot-cli-and-js</module>
 		<module>gs-consuming-web-service</module>
 		<module>gs-accessing-data-rest</module>
+		<module>gs-accessing-neo4j-data-rest</module>
 	</modules>
 
 	<properties>
