--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,7 @@
 		<module>gs-accessing-data-rest</module>
 		<module>gs-accessing-neo4j-data-rest</module>
 		<module>gs-accessing-mongodb-data-rest</module>
+		<module>gs-accessing-gemfire-data-rest</module>
 	</modules>
 
 	<properties>
