添加Simple Single Project YARN Application Demo

--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		<module>gs-accessing-mongodb-data-rest</module>
 		<module>gs-accessing-gemfire-data-rest</module>
 		<module>gs-producing-web-service</module>
+		<module>gs-yarn-basic-single</module>
 	</modules>
 
 	<properties>
