添加React.js and Spring Data REST - Basic Demo

--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,7 @@
 		<module>gs-spring-boot-docker</module>
 		<module>gs-crud-with-vaadin</module>
 		<module>gs-service-registration-and-discovery</module>
+		<module>react-and-spring-data-rest-basic</module>
 	</modules>
 
 	<properties>
