添加React.js and Spring Data REST - Security Demo

--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,7 @@
 		<module>gs-crud-with-vaadin</module>
 		<module>gs-service-registration-and-discovery</module>
 		<module>react-and-spring-data-rest-basic</module>
+		<module>react-and-spring-data-rest-security</module>
 	</modules>
 
 	<properties>
