添加React.js and Spring Data REST - Hypermedia Demo

--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,7 @@
 		<module>gs-service-registration-and-discovery</module>
 		<module>react-and-spring-data-rest-basic</module>
 		<module>react-and-spring-data-rest-security</module>
+		<module>react-and-spring-data-rest-hypermedia</module>
 	</modules>
 
 	<properties>
