--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
 		<module>react-and-spring-data-rest-basic</module>
 		<module>react-and-spring-data-rest-security</module>
 		<module>react-and-spring-data-rest-hypermedia</module>
+		<module>react-and-spring-data-rest-events</module>
 	</modules>
 
 	<properties>
