添加React.js and Spring Data REST - Conditional Demo

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
 		<module>react-and-spring-data-rest-security</module>
 		<module>react-and-spring-data-rest-hypermedia</module>
 		<module>react-and-spring-data-rest-events</module>
+		<module>react-and-spring-data-rest-conditional</module>
 	</modules>
 
 	<properties>
