--- a/gs-accessing-data-jpa/src/main/resources/application.properties
+++ b/gs-accessing-data-jpa/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.datasource.url = jdbc:mysql://10.17.41.179:3306/test
-spring.datasource.username = sean
+spring.datasource.url = jdbc:mysql://localhost:3306/springboot
+spring.datasource.username = springboot
 spring.datasource.password = 123456
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 # Specify the DBMS
